test/errors/010_assert.eu
# -*- mode: conf -*-

x: true //=> false
